--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,26 @@
 @import "tailwindcss";
 
-*
+
+
+* 
 {
-  box-sizing: border-box;
+   font-family: "Poppins", sans-serif;
 }
-html, div
+html,body
 {
   height: 100%;
-  
+
 }
+
 
 body
 {
-  height: 100dvh;
+  
+  display: flex;
+  flex-direction: column;
 }
 
+#cta-button-sidebar
+{
+ box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+}
